--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ img {
 </div>
 <div id="schedule" class="section level1">
 <h1>Schedule</h1>
-<p>| Day | Date | Module | Resources | Description | |—|—|—|—|—| | 1 | 2015-06-15 | | <a href="http://tryr.codeschool.com/">Try R</a> | Finish all modules | <!-- | 1  | 2015-06-15  | Module 1  | [lecSlides](modules/module1.html), [lecNotes](modules/module1.pdf)  | Introduction to R  |
+<p>| Day | Date | Module | Resources | Description | |—|—|—|—|—| | 1 | 2016-01-04 | | <a href="http://tryr.codeschool.com/">Try R</a> | Finish all modules | |—|—|—|—|—| <!-- | 1  | 2015-06-15  | Module 1  | [lecSlides](modules/module1.html), [lecNotes](modules/module1.pdf)  | Introduction to R  |
 | 1  | 2015-06-15  | Module 2  | [lecSlides](modules/module2.html), [lecNotes](modules/module2.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module2.R), [lab](labs/module2_lab.R), [key](labs/module2_lab_key.R)| R variables  |
 | 1  | 2015-06-15  | Module 3  | [lecSlides](modules/module3.html), [lecNotes](modules/module3.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module3.R), [lab](labs/module3_lab.R), [key](labs/module3_lab_key.R)  | Data Classes  |
 |---|---|---|---|---|
@@ -110,7 +110,7 @@ img {
 | 5  | 2015-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 --></p>
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2015-12-28 16:47:44 Eastern Time.</p>
+<p>This page was last updated on 2015-12-28 16:51:30 Eastern Time.</p>
 </div>
 
 
