--- a/Data_IO/lecture/Data_IO.html
+++ b/Data_IO/lecture/Data_IO.html
@@ -146,10 +146,10 @@ read.table( file, # filename
 <p>Monuments Dataset: &quot;This data set shows the point location of Baltimore City monuments. However, the completness and currentness of these data are uncertain.&quot;</p>
 
 <ul>
-<li>Navigate to: <a href='https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3' title=''>https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3</a></li>
-<li>Export &#8211;&gt; Download &#8211;&gt; Download As: CSV</li>
+<li>(If this doens&#39;t work go to <a href='http://www.aejaffe.com/winterR_2016/data/Monuments.csv' title=''>http://www.aejaffe.com/winterR_2016/data/Monuments.csv</a>)</li>
 <li>Save it (or move it) to the same folder as your day1.R script</li>
 <li>Within RStudio: Session &#8211;&gt; Set Working Directory &#8211;&gt; To Source File Location</li>
+<li>(data downloaded from <a href='https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3' title=''>https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3</a>)</li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-4">
@@ -162,7 +162,7 @@ read.table( file, # filename
 ##     fill = TRUE, comment.char = &quot;&quot;, ...) 
 ## read.table(file = file, header = header, sep = sep, quote = quote, 
 ##     dec = dec, fill = fill, comment.char = comment.char, ...)
-## &lt;bytecode: 0x7fb1a1e2cbf8&gt;
+## &lt;bytecode: 0x7fd1958f33f8&gt;
 ## &lt;environment: namespace:utils&gt;</pre>
 
 <p>Note: the <code>...</code> designates extra/optional arguments that can be passed to <code>read.table()</code> if needed</p>
