--- a/Data_IO/lecture/Data_IO.html
+++ b/Data_IO/lecture/Data_IO.html
@@ -10,7 +10,6 @@
 
 
 
-  <meta name="date" content="2016-06-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -90,7 +89,7 @@
       <h1 data-config-title><!-- populated from slide_config.json --></h1>
       <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
       <p data-config-presenter><!-- populated from slide_config.json --></p>
-            <p style="margin-top: 6px; margin-left: -2px;">June 15, 2016</p>
+            <p style="margin-top: 6px; margin-left: -2px;">January 4, 2016</p>
           </hgroup>
   </slide>
 
@@ -146,7 +145,7 @@ read.table( file, # filename
 <p>Monuments Dataset: &quot;This data set shows the point location of Baltimore City monuments. However, the completness and currentness of these data are uncertain.&quot;</p>
 
 <ul>
-<li>(If this doens&#39;t work go to <a href='http://www.aejaffe.com/winterR_2016/data/Monuments.csv' title=''>http://www.aejaffe.com/winterR_2016/data/Monuments.csv</a>)</li>
+<li>Download data from <a href='http://www.aejaffe.com/winterR_2016/data/Monuments.csv' title=''>http://www.aejaffe.com/winterR_2016/data/Monuments.csv</a></li>
 <li>Save it (or move it) to the same folder as your day1.R script</li>
 <li>Within RStudio: Session &#8211;&gt; Set Working Directory &#8211;&gt; To Source File Location</li>
 <li>(data downloaded from <a href='https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3' title=''>https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3</a>)</li>
@@ -162,7 +161,7 @@ read.table( file, # filename
 ##     fill = TRUE, comment.char = &quot;&quot;, ...) 
 ## read.table(file = file, header = header, sep = sep, quote = quote, 
 ##     dec = dec, fill = fill, comment.char = comment.char, ...)
-## &lt;bytecode: 0x7fd1958f33f8&gt;
+## &lt;bytecode: 0x0000000007d29da8&gt;
 ## &lt;environment: namespace:utils&gt;</pre>
 
 <p>Note: the <code>...</code> designates extra/optional arguments that can be passed to <code>read.table()</code> if needed</p>
@@ -246,7 +245,7 @@ getwd()
 
 <pre class = 'prettyprint lang-r'>dir(&quot;..&quot;)</pre>
 
-<pre >## [1] &quot;lab&quot;     &quot;lecture&quot;</pre>
+<pre >## [1] &quot;lecture&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Working Directory</h2></hgroup><article  id="working-directory-1">
 
