--- a/Data_IO/lecture/Data_IO.html
+++ b/Data_IO/lecture/Data_IO.html
@@ -103,7 +103,7 @@
 
 <pre class = 'prettyprint lang-r'>## get the working directory
 getwd()
-# setwd(&quot;~/Dropbox/winterR_2016/Lectures&quot;)</pre>
+# setwd(&quot;~/winterR_2016/Lectures&quot;)</pre>
 
 </article></slide><slide class=''><hgroup><h2>Setting a Working Directory</h2></hgroup><article  id="setting-a-working-directory">
 
@@ -125,7 +125,9 @@ getwd()
 
 </article></slide><slide class=''><hgroup><h2>Working Directory</h2></hgroup><article  id="working-directory">
 
-<p>Try some directory navigation:</p>
+<p>Note that the <code>dir()</code> function interfaces with your operating system and can show you which files are in your current working directory.</p>
+
+<p>You can try some directory navigation:</p>
 
 <pre class = 'prettyprint lang-r'>dir(&quot;./&quot;) # shows directory contents</pre>
 
@@ -157,7 +159,35 @@ getwd()
 </ul></li>
 </ul>
 
-</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-1" class="smaller">
+</article></slide><slide class=''><hgroup><h2>Data Aside</h2></hgroup><article  id="data-aside">
+
+<ul>
+<li>Everything we do in class will be using real publicly available data - there are few &#39;toy&#39; example datasets and &#39;simulated&#39; data</li>
+<li>OpenBaltimore and Data.gov will be sources for the first few days</li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-1">
+
+<p>Monuments Dataset: &quot;This data set shows the point location of Baltimore City monuments. However, the completness and currentness of these data are uncertain.&quot;</p>
+
+<ul>
+<li>Download data from <a href='http://www.aejaffe.com/winterR_2016/data/Monuments.csv' title=''>http://www.aejaffe.com/winterR_2016/data/Monuments.csv</a></li>
+<li>Save it (or move it) to the same folder as your day1.R script</li>
+<li>Within RStudio: Session &#8211;&gt; Set Working Directory &#8211;&gt; To Source File Location</li>
+<li>(data downloaded from <a href='https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3' title=''>https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3</a>)</li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-2">
+
+<p>R Studio features some nice &quot;drop down&quot; support, where you can run some tasks by selecting them from the toolbar.</p>
+
+<p>For example, you can easily import text datasets using the &quot;Tools &#8211;&gt; Import Dataset&quot; command. Selecting this will bring up a new screen that lets you specify the formatting of your text file.</p>
+
+<p>After importing a datatset, you get the corresponding R commands that you can enter in the console if you want to re-import data.</p>
+
+</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-3" class="smaller">
+
+<p>So what is going on &quot;behind the scenes&quot;?</p>
 
 <p><code>read.table()</code>: Reads a file in table format and creates a data frame from it, with cases corresponding to lines and variables to fields in the file.</p>
 
@@ -174,39 +204,13 @@ read.table( file, # filename
            
 # for example: `read.table(&quot;file.txt&quot;, header = TRUE, sep=&quot;\t&quot;, as.is=TRUE)`</pre>
 
-</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-2">
+</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-4">
 
 <ul>
 <li>The filename is the path to your file, in quotes</li>
 <li>The function will look in your &quot;working directory&quot; if no absolute file path is given</li>
 <li>Note that the filename can also be a path to a file on a website (e.g. &#39;www.someurl.com/table1.txt&#39;)</li>
 </ul>
-
-</article></slide><slide class=''><hgroup><h2>Data Aside</h2></hgroup><article  id="data-aside">
-
-<ul>
-<li>Everything we do in class will be using real publicly available data - there are few &#39;toy&#39; example datasets and &#39;simulated&#39; data</li>
-<li>OpenBaltimore and Data.gov will be sources for the first few days</li>
-</ul>
-
-</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-3">
-
-<p>Monuments Dataset: &quot;This data set shows the point location of Baltimore City monuments. However, the completness and currentness of these data are uncertain.&quot;</p>
-
-<ul>
-<li>Download data from <a href='http://www.aejaffe.com/winterR_2016/data/Monuments.csv' title=''>http://www.aejaffe.com/winterR_2016/data/Monuments.csv</a></li>
-<li>Save it (or move it) to the same folder as your day1.R script</li>
-<li>Within RStudio: Session &#8211;&gt; Set Working Directory &#8211;&gt; To Source File Location</li>
-<li>(data downloaded from <a href='https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3' title=''>https://data.baltimorecity.gov/Community/Monuments/cpxf-kxp3</a>)</li>
-</ul>
-
-</article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-4">
-
-<p>R Studio features some nice &quot;drop down&quot; support, where you can run some tasks by selecting them from the toolbar.</p>
-
-<p>For example, you can easily import text datasets using the &quot;Tools &#8211;&gt; Import Dataset&quot; command. Selecting this will bring up a new screen that lets you specify the formatting of your text file.</p>
-
-<p>After importing a datatset, you get the corresponding R commands that you can enter in the console if you want to re-import data.</p>
 
 </article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-5">
 
@@ -218,7 +222,7 @@ read.table( file, # filename
 ##     fill = TRUE, comment.char = &quot;&quot;, ...) 
 ## read.table(file = file, header = header, sep = sep, quote = quote, 
 ##     dec = dec, fill = fill, comment.char = comment.char, ...)
-## &lt;bytecode: 0x000000000a8c6c80&gt;
+## &lt;bytecode: 0x000000000a900248&gt;
 ## &lt;environment: namespace:utils&gt;</pre>
 
 <p>Note: the <code>...</code> designates extra/optional arguments that can be passed to <code>read.table()</code> if needed</p>
@@ -226,7 +230,7 @@ read.table( file, # filename
 </article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-6" class="smaller">
 
 <ul>
-<li>Starting out, you can use RStudio &#8211;&gt; Tools &#8211;&gt; Import Dataset &#8211;&gt; From Text File and select</li>
+<li>Here would be reading in the data from the command line, specifying the file path:</li>
 </ul>
 
 <pre class = 'prettyprint lang-r'>mon = read.csv(&quot;../../data/Monuments.csv&quot;,header=TRUE,as.is=TRUE)
@@ -249,28 +253,20 @@ head(mon)</pre>
 
 </article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-7" class="smaller">
 
-<pre class = 'prettyprint lang-r'>colnames(mon)</pre>
+<pre class = 'prettyprint lang-r'>colnames(mon) # column names</pre>
 
 <pre >## [1] &quot;name&quot;            &quot;zipCode&quot;         &quot;neighborhood&quot;    &quot;councilDistrict&quot;
 ## [5] &quot;policeDistrict&quot;  &quot;Location.1&quot;</pre>
 
-<pre class = 'prettyprint lang-r'>head(mon$zipCode)</pre>
+<pre class = 'prettyprint lang-r'>head(mon$zipCode) # first few rows</pre>
 
 <pre >## [1] 21201 21202 21202 21202 21202 21202</pre>
 
-<pre class = 'prettyprint lang-r'>head(mon$neighborhood)</pre>
-
-<pre >## [1] &quot;Downtown&quot; &quot;Downtown&quot; &quot;Downtown&quot; &quot;Downtown&quot; &quot;Downtown&quot; &quot;Downtown&quot;</pre>
-
 </article></slide><slide class=''><hgroup><h2>Data Input</h2></hgroup><article  id="data-input-8">
 
-<p>The <code>read.table()</code> function returns a <code>data.frame</code></p>
+<p>The <code>read.table()</code> function returns a <code>data.frame</code>, which is the primary data format for most data cleaning and analyses</p>
 
-<pre class = 'prettyprint lang-r'>class(mon)</pre>
-
-<pre >## [1] &quot;data.frame&quot;</pre>
-
-<pre class = 'prettyprint lang-r'>str(mon)</pre>
+<pre class = 'prettyprint lang-r'>str(mon) # structure of an R object</pre>
 
 <pre >## &#39;data.frame&#39;:    84 obs. of  6 variables:
 ##  $ name           : chr  &quot;James Cardinal Gibbons&quot; &quot;The Battle Monument&quot; &quot;Negro Heroes of the U.S Monument&quot; &quot;Star Bangled Banner&quot; ...
@@ -294,7 +290,55 @@ names(mon)</pre>
 names(mon)</pre>
 
 <pre >## [1] &quot;name&quot;            &quot;zipCode&quot;         &quot;neighborhood&quot;    &quot;councilDistrict&quot;
-## [5] &quot;policeDistrict&quot;  &quot;Location.1&quot;</pre></article></slide>
+## [5] &quot;policeDistrict&quot;  &quot;Location.1&quot;</pre>
+
+</article></slide><slide class=''><hgroup><h2>Data Output</h2></hgroup><article  id="data-output" class="smaller">
+
+<p>While its nice to be able to read in a variety of data formats, it&#39;s equally important to be able to output data somewhere.</p>
+
+<p><code>write.table()</code>: prints its required argument <code>x</code> (after converting it to a <code>data.frame</code> if it is not one nor a <code>matrix</code>) to a file or connection.</p>
+
+<pre >write.table(x,file = &quot;&quot;, append = FALSE, quote = TRUE, sep = &quot; &quot;,
+            eol = &quot;\n&quot;, na = &quot;NA&quot;, dec = &quot;.&quot;, row.names = TRUE,
+            col.names = TRUE, qmethod = c(&quot;escape&quot;, &quot;double&quot;),
+            fileEncoding = &quot;&quot;)</pre>
+
+</article></slide><slide class=''><hgroup><h2>Data Output</h2></hgroup><article  id="data-output-1">
+
+<p><code>x</code>: the R <code>data.frame</code> or <code>matrix</code> you want to write</p>
+
+<p><code>file</code>: the file name where you want to R object written. It can be an absolute path, or a filename (which writes the file to your working directory)</p>
+
+<p><code>sep</code>: what character separates the columns?</p>
+
+<ul>
+<li>&quot;,&quot; = .csv - Note there is also a <code>write.csv()</code> function</li>
+<li>&quot;&quot; = tab delimited</li>
+</ul>
+
+<p><code>row.names</code>: I like setting this to FALSE because I email these to collaborators who open them in Excel</p>
+
+</article></slide><slide class=''><hgroup><h2>Data Output</h2></hgroup><article  id="data-output-2" class="smaller">
+
+<p>For example, we can write back out the Monuments dataset with the new column name:</p>
+
+<pre class = 'prettyprint lang-r'>names(mon)[6] = &quot;Location&quot;
+write.csv(mon, file=&quot;monuments_newNames.csv&quot;, row.names=FALSE)</pre>
+
+<p>Note that <code>row.names=TRUE</code> would make the first column contain the row names, here just the numbers <code>1:nrow(mon)</code>, which is not very useful for Excel. Note that row names can be useful/informative in R if they contain information (but then they would just be a separate column).</p>
+
+</article></slide><slide class=''><hgroup><h2>Data Input - Excel</h2></hgroup><article  id="data-input---excel">
+
+<p>Many data analysts collaborate with researchers who use Excel to enter and curate their data. Often times, this is the input data for an analysis. You therefore have two options for getting this data into R:</p>
+
+<ul>
+<li>Saving the Excel sheet as a .csv file, and using <code>read.csv()</code></li>
+<li>Using an add-on package called <code>xlsx</code></li>
+</ul>
+
+<p>For single worksheet .xlsx files, I often just save the spreadsheet as a .csv file (because I often have to strip off additional summary data from the columns)</p>
+
+<p>For an .xlsx file with multiple well-formated worksheets, I use the <code>xlsx</code> package for reading in the data.</p></article></slide>
 
 
   <slide class="backdrop"></slide>
