--- a/Data_IO/lecture/Data_IO.html
+++ b/Data_IO/lecture/Data_IO.html
@@ -74,7 +74,7 @@
 
   </style>
 
-  <link href="data:text/css,pre%20%7B%0A%20%20font%2Dfamily%3A%20%27Source%20Code%20Pro%27%2C%20%27Courier%20New%27%2C%20monospace%3B%0A%20%20font%2Dsize%3A%2024px%3B%0A%20%20line%2Dheight%3A%2024px%3B%0A%20%20padding%3A%2010px%200%2010px%2060px%3B%0A%20%20letter%2Dspacing%3A%20%2D1px%3B%0A%20%20margin%2Dbottom%3A%208px%3B%0A%20%20width%3A%20106%25%3B%0A%20%20left%3A%20%2D60px%3B%0A%20%20position%3A%20relative%3B%0A%20%20%2Dwebkit%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2Dmoz%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20box%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2F%2Aoverflow%3A%20hidden%3B%2A%2F%0A%7D%0A%0A%2F%2A%20Whole%20document%3A%20%2A%2F%0Abody%7B%0A%20%20font%2Dfamily%3A%20Helvetica%3B%0A%20%20font%2Dsize%3A%2016pt%3B%0A%7D%0A%0A%2F%2A%20Headers%20%2A%2F%0Ah1%7B%0A%20%20font%2Dsize%3A%2028pt%3B%0A%7D%0Ah2%7B%0A%20%20font%2Dsize%3A%2024pt%3B%0A%7D%0Ah3%7B%0A%20%20font%2Dsize%3A%2020pt%3B%0A%7D%0A%0A%0A%2Eemphasized%20%7B%0A%20%20%20font%2Dsize%3A%201%2E2em%3B%0A%7D%0A%0A%2Esmall%20%7B%0A%20%20%20font%2Dsize%3A%200%2E8em%3B%0A%7D" rel="stylesheet" type="text/css" />
+  <link href="data:text/css,pre%20%7B%0A%20%20font%2Dfamily%3A%20%27Source%20Code%20Pro%27%2C%20%27Courier%20New%27%2C%20monospace%3B%0A%20%20font%2Dsize%3A%2024px%3B%0A%20%20line%2Dheight%3A%2024px%3B%0A%20%20padding%3A%2010px%200%2010px%2060px%3B%0A%20%20letter%2Dspacing%3A%20%2D1px%3B%0A%20%20margin%2Dbottom%3A%208px%3B%0A%20%20width%3A%20106%25%3B%0A%20%20left%3A%20%2D60px%3B%0A%20%20position%3A%20relative%3B%0A%20%20%2Dwebkit%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2Dmoz%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20box%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2F%2Aoverflow%3A%20hidden%3B%2A%2F%0A%7D%0A%0A%2F%2A%20Whole%20document%3A%20%2A%2F%0Abody%7B%0A%20%20font%2Dfamily%3A%20Helvetica%3B%0A%20%20font%2Dsize%3A%2016pt%3B%0A%7D%0A%0A%2F%2A%20Headers%20%2A%2F%0Ah1%7B%0A%20%20font%2Dsize%3A%2028pt%3B%0A%7D%0Ah2%7B%0A%20%20font%2Dsize%3A%2024pt%3B%0A%7D%0Ah3%7B%0A%20%20font%2Dsize%3A%2020pt%3B%0A%7D%0A%0A%0A%2Eemphasized%20%7B%0A%20%20%20font%2Dsize%3A%201%2E2em%3B%0A%7D%0A%0A%2Esmall%20%7B%0A%20%20%20font%2Dsize%3A%200%2E8em%3B%0A%7D%0A%0Astrong%20%7B%20%0A%20%20%20%20font%2Dweight%3A%20bold%3B%0A%20%20%20%20color%3A%20black%3B%0A%7D" rel="stylesheet" type="text/css" />
 
 
 </head>
@@ -131,11 +131,12 @@ getwd()
 
 <pre class = 'prettyprint lang-r'>dir(&quot;./&quot;) # shows directory contents</pre>
 
-<pre >## [1] &quot;Data_IO.html&quot; &quot;Data_IO.Rmd&quot;</pre>
+<pre >## [1] &quot;Data_IO.html&quot;           &quot;Data_IO.Rmd&quot;           
+## [3] &quot;monuments_newNames.csv&quot;</pre>
 
 <pre class = 'prettyprint lang-r'>dir(&quot;..&quot;)</pre>
 
-<pre >## [1] &quot;lecture&quot;</pre>
+<pre >## [1] &quot;lab&quot;     &quot;lecture&quot;</pre>
 
 </article></slide><slide class=''><hgroup><h2>Working Directory</h2></hgroup><article  id="working-directory-1">
 
@@ -222,7 +223,7 @@ read.table( file, # filename
 ##     fill = TRUE, comment.char = &quot;&quot;, ...) 
 ## read.table(file = file, header = header, sep = sep, quote = quote, 
 ##     dec = dec, fill = fill, comment.char = comment.char, ...)
-## &lt;bytecode: 0x000000000a900248&gt;
+## &lt;bytecode: 0x7f8dfe2b9698&gt;
 ## &lt;environment: namespace:utils&gt;</pre>
 
 <p>Note: the <code>...</code> designates extra/optional arguments that can be passed to <code>read.table()</code> if needed</p>
@@ -338,7 +339,16 @@ write.csv(mon, file=&quot;monuments_newNames.csv&quot;, row.names=FALSE)</pre>
 
 <p>For single worksheet .xlsx files, I often just save the spreadsheet as a .csv file (because I often have to strip off additional summary data from the columns)</p>
 
-<p>For an .xlsx file with multiple well-formated worksheets, I use the <code>xlsx</code> package for reading in the data.</p></article></slide>
+<p>For an .xlsx file with multiple well-formated worksheets, I use the <code>xlsx</code> package for reading in the data.</p>
+
+</article></slide><slide class=''><hgroup><h2>Data Input - Other Software</h2></hgroup><article  id="data-input---other-software">
+
+<ul>
+<li><strong>haven</strong> package (<a href='https://cran.r-project.org/web/packages/haven/index.html' title=''>https://cran.r-project.org/web/packages/haven/index.html</a>) reads in SAS, SPSS, Stata formats</li>
+<li><strong>readr</strong> package - Has <em>read_csv</em>/<em>write_csv</em> and <em>read_table</em> functions similar to <em>read.csv</em>/<em>write.csv</em> and <em>read.table</em>. Has different defaults, but can read <strong>much faster</strong> for very large data sets</li>
+<li><strong>sas7bdat</strong> reads .sas7bdat files</li>
+<li><strong>foreign</strong> package - can read all the formats as <strong>haven</strong>. Around longer (aka more testing), but not as maintained (bad for future).</li>
+</ul></article></slide>
 
 
   <slide class="backdrop"></slide>
