added base R description

--- a/RStudio/lecture/RStudio.html
+++ b/RStudio/lecture/RStudio.html
@@ -144,16 +144,28 @@
 </article></slide><slide class=''><hgroup><h2>Other Panes</h2></hgroup><article  id="other-panes">
 
 <ul>
+<li><strong>Files</strong> - shows the files on your computer of the directory you are working in</li>
+<li><strong>Viewer</strong> - can view data or R objects</li>
+<li><strong>Help</strong> - shows help of R commands</li>
+<li><strong>Plots</strong> - pretty pictures</li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Other Panes - packages</h2></hgroup><article  id="other-panes---packages">
+
+<ul>
 <li><strong>Packages</strong> - list of R packages that are loaded in memory
 
 <ul>
 <li>Packages are a set of functions written by R users</li>
 <li>We write packages - some are good, some are not so good</li>
 </ul></li>
-<li><strong>Files</strong> - shows the files on your computer of the directory you are working in</li>
-<li><strong>Viewer</strong> - can view data or R objects</li>
-<li><strong>Help</strong> - shows help of R commands</li>
-<li><strong>Plots</strong> - pretty pictures</li>
+<li>Think of them as &quot;R Extensions&quot;</li>
+<li>If they extend R, when you download R from CRAN, we (and others) refer to things as &quot;base R&quot;
+
+<ul>
+<li>We will show you how to do some things in base R, but also show you some newer (and more intuitive) ways to do things</li>
+<li>You need base R, however, because when you Google for answers, they are commonly answered without any additional packages.</li>
+</ul></li>
 </ul></article></slide>
 
 
