--- a/index.html
+++ b/index.html
@@ -96,9 +96,37 @@ img {
 <tr class="odd">
 <td align="left">1</td>
 <td align="left">2016-01-04</td>
-<td align="left"></td>
+<td align="left">Homework 1</td>
 <td align="left"><a href="http://tryr.codeschool.com/">Try R</a></td>
 <td align="left">Finish all modules</td>
+</tr>
+<tr class="even">
+<td align="left">1</td>
+<td align="left">2016-01-04</td>
+<td align="left">Module 1</td>
+<td align="left"><a href="Intro/lecture/Intro.html">HTML</a>, <a href="Intro/lecture/Intro.pdf">PDF</a></td>
+<td align="left">Class Introduction</td>
+</tr>
+<tr class="odd">
+<td align="left">1</td>
+<td align="left">2016-01-04</td>
+<td align="left">Module 2</td>
+<td align="left"><a href="RStudio/lecture/RStudio.html">HTML</a>, <a href="RStudio/lecture/RStudio.pdf">PDF</a></td>
+<td align="left">R Studio</td>
+</tr>
+<tr class="even">
+<td align="left">1</td>
+<td align="left">2016-01-04</td>
+<td align="left">Module 3</td>
+<td align="left"><a href="Basic_R/lecture/Basic_R.html">HTML</a>, <a href="Basic_R/lecture/Basic_R.pdf">PDF</a></td>
+<td align="left">Basic R</td>
+</tr>
+<tr class="odd">
+<td align="left">1</td>
+<td align="left">2016-01-04</td>
+<td align="left">Module 4</td>
+<td align="left"><a href="Data_IO/lecture/Data_IO.html">HTML</a>, <a href="Data_IO/lecture/Data_IO.pdf">PDF</a></td>
+<td align="left">Data Import/Output</td>
 </tr>
 <tr class="even">
 <td align="left">—</td>
@@ -109,36 +137,31 @@ img {
 </tr>
 </tbody>
 </table>
-<!--
-| 1  | 2015-06-15  | Module 1  | [lecSlides](modules/module1.html), [lecNotes](modules/module1.pdf)  | Introduction to R  |
-| 1  | 2015-06-15  | Module 2  | [lecSlides](modules/module2.html), [lecNotes](modules/module2.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module2.R), [lab](labs/module2_lab.R), [key](labs/module2_lab_key.R)| R variables  |
-| 1  | 2015-06-15  | Module 3  | [lecSlides](modules/module3.html), [lecNotes](modules/module3.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module3.R), [lab](labs/module3_lab.R), [key](labs/module3_lab_key.R)  | Data Classes  |
+<!-- | 2  | 2016-06-16  | HW2  | [code](hw/Homework2.R)  |   |
+| 2  | 2016-06-16  | Module 4  | [lecSlides](modules/module4.html), [lecNotes](modules/module4.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module4.R), [lab](labs/module4_lab.R), [key](labs/module4_lab_review.html)  | Data Input  |
+| 2  | 2016-06-16  | Module 5  | [lecSlides](modules/module5.html), [lecNotes](modules/module5.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module5.R), [lab](labs/module5_lab.txt)  | Data I/O + Subset |
+| 2  | 2016-06-16  | Module 6  | [lecSlides](modules/module6.html), [lecNotes](modules/module6.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module6.R), [lab](labs/module6_lab.R), [key](labs/module6_lab_key.R) | Manipulation |
 |---|---|---|---|---|
-| 2  | 2015-06-16  | HW2  | [code](hw/Homework2.R)  |   |
-| 2  | 2015-06-16  | Module 4  | [lecSlides](modules/module4.html), [lecNotes](modules/module4.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module4.R), [lab](labs/module4_lab.R), [key](labs/module4_lab_review.html)  | Data Input  |
-| 2  | 2015-06-16  | Module 5  | [lecSlides](modules/module5.html), [lecNotes](modules/module5.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module5.R), [lab](labs/module5_lab.txt)  | Data I/O + Subset |
-| 2  | 2015-06-16  | Module 6  | [lecSlides](modules/module6.html), [lecNotes](modules/module6.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module6.R), [lab](labs/module6_lab.R), [key](labs/module6_lab_key.R) | Manipulation |
+| 3  | 2016-06-17  | Homework 3  | [HW](hw/homework3.R) | Homework |
+| 3  | 2016-06-17  | Module 7  | [lecSlides](modules/module7.html), [lecNotes](modules/module7.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module7.R), [lab](labs/module7_lab.R), [key](labs/module7_lab_key.R)  | Summarization |
+| 3  | 2016-06-17  | Module 8  | [lecSlides](modules/module8.html), [lecNotes](modules/module8.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module8.R), [lab](labs/module8_lab.R), [key](labs/module8_lab_key.R)  | Visualization |
 |---|---|---|---|---|
-| 3  | 2015-06-17  | Homework 3  | [HW](hw/homework3.R) | Homework |
-| 3  | 2015-06-17  | Module 7  | [lecSlides](modules/module7.html), [lecNotes](modules/module7.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module7.R), [lab](labs/module7_lab.R), [key](labs/module7_lab_key.R)  | Summarization |
-| 3  | 2015-06-17  | Module 8  | [lecSlides](modules/module8.html), [lecNotes](modules/module8.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module8.R), [lab](labs/module8_lab.R), [key](labs/module8_lab_key.R)  | Visualization |
+| 4  | 2016-06-18  | Module 9  | [lecSlides](modules/module9.html), [lecNotes](modules/module9.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module9.R), [lab](labs/module9_lab.R), [key](labs/module9_lab_key.R)  | Data cleaning |
+| 4  | 2016-06-18  | Module 10  | [lecSlides](modules/module10.html), [lecNotes](modules/module10.pdf),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module10.R) | Lists and functions |
+| 4  | 2016-06-18  | Module 11  | [lecSlides](modules/module11.html), [lecNotes](modules/module11.pdf),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module11.R) | Statistics |
 |---|---|---|---|---|
-| 4  | 2015-06-18  | Module 9  | [lecSlides](modules/module9.html), [lecNotes](modules/module9.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module9.R), [lab](labs/module9_lab.R), [key](labs/module9_lab_key.R)  | Data cleaning |
-| 4  | 2015-06-18  | Module 10  | [lecSlides](modules/module10.html), [lecNotes](modules/module10.pdf),  [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module10.R) | Lists and functions |
-| 4  | 2015-06-18  | Module 11  | [lecSlides](modules/module11.html), [lecNotes](modules/module11.pdf),  [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module11.R) | Statistics |
-|---|---|---|---|---|
-| 5  | 2015-06-19  | Module 12 lecture | [lecSlides](modules/module12.html), [lecNotes](modules/module12.pdf), [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/module12.R)  | Reproducible research  |
-| 5  | 2015-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html)  | Reproducible research (practical) |
-| 5  | 2015-06-19  | Module 13  | [lecSlides](modules/mapping_module.html),  [code](https://github.com/andrewejaffe/summerR_2015/blob/gh-pages/modules/mapping_module.R), [lab](labs/mapping_module_lab.R) | Mapping Tools  |
+| 5  | 2016-06-19  | Module 12 lecture | [lecSlides](modules/module12.html), [lecNotes](modules/module12.pdf), [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/module12.R)  | Reproducible research  |
+| 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html)  | Reproducible research (practical) |
+| 5  | 2016-06-19  | Module 13  | [lecSlides](modules/mapping_module.html),  [code](https://github.com/andrewejaffe/summerR_2016/blob/gh-pages/modules/mapping_module.R), [lab](labs/mapping_module_lab.R) | Mapping Tools  |
 
 <!-- Add links to the rest of the material as we go
 
-| 5  | 2015-06-19  | Module X  | [lecSlides](modules/moduleX.html), [code](), [lab](), [key]()  |   |
+| 5  | 2016-06-19  | Module X  | [lecSlides](modules/moduleX.html), [code](), [lab](), [key]()  |   |
 
-| 5  | 2015-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
+| 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-03 18:32:15 Eastern Time.</p>
+<p>This page was last updated on 2016-01-03 18:47:04 Eastern Time.</p>
 </div>
 
 
