--- a/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
+++ b/Manipulating_Data_in_R/lecture/Manipulating_Data_in_R.html
@@ -176,12 +176,22 @@ x[-(1:3)] # needs parentheses</pre>
 
 <pre >## [1]  4  8 10</pre>
 
-<p>using the following</p>
+</article></slide><slide class=''><hgroup><h2>Select specific elements using logical operators</h2></hgroup><article  id="select-specific-elements-using-logical-operators-1">
+
+<p>You can have multiple logical conditions using the following:</p>
 
 <ul>
 <li><code>&amp;</code> : AND</li>
 <li><code>|</code> : OR</li>
-</ul></article></slide>
+</ul>
+
+<pre class = 'prettyprint lang-r'>x[ x &gt; 2 &amp; x &lt; 5 ]</pre>
+
+<pre >## [1] 4</pre>
+
+<pre class = 'prettyprint lang-r'>x[ x &gt; 5 | x == 2 ]</pre>
+
+<pre >## [1]  2  8 10</pre></article></slide>
 
 
   <slide class="backdrop"></slide>
