--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ img {
 <td align="left">1</td>
 <td align="left">2016-01-04</td>
 <td align="left">Module 4</td>
-<td align="left"><a href="Data_IO/lecture/Data_IO.html">HTML</a>, <a href="Data_IO/lecture/Data_IO.pdf">PDF</a></td>
+<td align="left"><a href="Data_IO/lecture/Data_IO.html">HTML</a>, <a href="Data_IO/lecture/Data_IO.pdf">PDF</a>, <a href="Data_IO/lab/Data_IO_Lab.R">Lab</a></td>
 <td align="left">Data Import/Output</td>
 </tr>
 <tr class="even">
@@ -164,7 +164,7 @@ img {
 | 5  | 2016-06-19  | Module 12 lab | [lab](labs/module12_lab.R), [illusion R Markdown](labs/illusion.Rmd), [illusion Word](labs/illusion.docx), [part 2 Rmd](labs/module12_lab_part2.Rmd), [part 2 html](labs/module12_lab_part2.html), [key](labs/module12_lab_key.R) | Reproducible research (practical) |
 -->
 <p>Feel free to submit typos/errors/etc via the github repository associated with the class: <a href="https://github.com/andrewejaffe/winterR_2016" class="uri">https://github.com/andrewejaffe/winterR_2016</a></p>
-<p>This page was last updated on 2016-01-03 18:51:01 Eastern Time.</p>
+<p>This page was last updated on 2016-01-03 19:03:49 Eastern Time.</p>
 </div>
 </div>
 
