--- a/RStudio/lecture/RStudio.html
+++ b/RStudio/lecture/RStudio.html
@@ -166,6 +166,20 @@
 <li>We will show you how to do some things in base R, but also show you some newer (and more intuitive) ways to do things</li>
 <li>You need base R, however, because when you Google for answers, they are commonly answered without any additional packages.</li>
 </ul></li>
+</ul>
+
+</article></slide><slide class=''><hgroup><h2>Hadey Wickham</h2></hgroup><article  id="hadey-wickham">
+
+<ul>
+<li>Previous Assistant Professor of Statistics at Rice University</li>
+<li>Writes many R packages</li>
+<li>One authority on all things R</li>
+<li>Employee and Developer at RStudio</li>
+<li>I (John) trust almost all his packages
+
+<ul>
+<li>How to trust an R package: <a href='http://simplystatistics.org/2015/11/06/how-i-decide-when-to-trust-an-r-package/' title=''>http://simplystatistics.org/2015/11/06/how-i-decide-when-to-trust-an-r-package/</a></li>
+</ul></li>
 </ul></article></slide>
 
 
