--- a/Intro/lecture/Intro.html
+++ b/Intro/lecture/Intro.html
@@ -26,8 +26,7 @@
       // Slide settings
       settings: {
                 title: 'Introduction to R',
-                        subtitle: 'Module 1',
-                useBuilds: true,
+                        useBuilds: true,
         usePrettify: true,
         enableSlideAreas: true,
         enableTouch: true,
@@ -75,7 +74,7 @@
 
   </style>
 
-  <link href="data:text/css,pre%20%7B%0A%20%20font%2Dfamily%3A%20%27Source%20Code%20Pro%27%2C%20%27Courier%20New%27%2C%20monospace%3B%0A%20%20font%2Dsize%3A%2024px%3B%0A%20%20line%2Dheight%3A%2024px%3B%0A%20%20padding%3A%2010px%200%2010px%2060px%3B%0A%20%20letter%2Dspacing%3A%20%2D1px%3B%0A%20%20margin%2Dbottom%3A%208px%3B%0A%20%20width%3A%20106%25%3B%0A%20%20left%3A%20%2D60px%3B%0A%20%20position%3A%20relative%3B%0A%20%20%2Dwebkit%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2Dmoz%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20box%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2F%2Aoverflow%3A%20hidden%3B%2A%2F%0A%7D%0A%0A%2F%2A%20Whole%20document%3A%20%2A%2F%0Abody%7B%0A%20%20font%2Dfamily%3A%20Helvetica%3B%0A%20%20font%2Dsize%3A%2016pt%3B%0A%7D%0A%0A%2F%2A%20Headers%20%2A%2F%0Ah1%7B%0A%20%20font%2Dsize%3A%2028pt%3B%0A%7D%0Ah2%7B%0A%20%20font%2Dsize%3A%2024pt%3B%0A%7D%0Ah3%7B%0A%20%20font%2Dsize%3A%2020pt%3B%0A%7D%0A%0A%0A%2Eemphasized%20%7B%0A%20%20%20font%2Dsize%3A%201%2E2em%3B%0A%7D%0A%0A%2Esmall%20%7B%0A%20%20%20font%2Dsize%3A%200%2E8em%3B%0A%7D" rel="stylesheet" type="text/css" />
+  <link href="data:text/css,pre%20%7B%0A%20%20font%2Dfamily%3A%20%27Source%20Code%20Pro%27%2C%20%27Courier%20New%27%2C%20monospace%3B%0A%20%20font%2Dsize%3A%2024px%3B%0A%20%20line%2Dheight%3A%2024px%3B%0A%20%20padding%3A%2010px%200%2010px%2060px%3B%0A%20%20letter%2Dspacing%3A%20%2D1px%3B%0A%20%20margin%2Dbottom%3A%208px%3B%0A%20%20width%3A%20106%25%3B%0A%20%20left%3A%20%2D60px%3B%0A%20%20position%3A%20relative%3B%0A%20%20%2Dwebkit%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2Dmoz%2Dbox%2Dsizing%3A%20border%2Dbox%3B%0A%20%20box%2Dsizing%3A%20border%2Dbox%3B%0A%20%20%2F%2Aoverflow%3A%20hidden%3B%2A%2F%0A%7D%0A%0A%2F%2A%20Whole%20document%3A%20%2A%2F%0Abody%7B%0A%20%20font%2Dfamily%3A%20Helvetica%3B%0A%20%20font%2Dsize%3A%2016pt%3B%0A%7D%0A%0A%2F%2A%20Headers%20%2A%2F%0Ah1%7B%0A%20%20font%2Dsize%3A%2028pt%3B%0A%7D%0Ah2%7B%0A%20%20font%2Dsize%3A%2024pt%3B%0A%7D%0Ah3%7B%0A%20%20font%2Dsize%3A%2020pt%3B%0A%7D%0A%0A%0A%2Eemphasized%20%7B%0A%20%20%20font%2Dsize%3A%201%2E2em%3B%0A%7D%0A%0A%2Esmall%20%7B%0A%20%20%20font%2Dsize%3A%200%2E8em%3B%0A%7D%0A%0Astrong%20%7B%20%0A%20%20%20%20font%2Dweight%3A%20bold%3B%0A%20%20%20%20color%3A%20black%3B%0A%7D" rel="stylesheet" type="text/css" />
 
 
 </head>
